--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,6 +4,6 @@
 <p class="description">Descripcion:  <%= @product.description%> </p>
 <span class="price">Precio: <%= @product.price %> </span>
 
-<%= link_to "Editar", edit_product_path(@product) %>
-<%= link_to "eliminar", product_path(@product), data: {turbo_method: :delete, turbo_confirm: 'Estas seguro de eliminar?'}%>
+<%= link_to t('.edit'), edit_product_path(@product) %>
+<%= link_to t('.delete'), product_path(@product), data: {turbo_method: :delete, turbo_confirm: t('common.confirm')}%>
 
