--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,4 +1,6 @@
 <nav>
 <h1><%= link_to "Productos", products_path%></h1>
-<%= link_to t('.add'), new_product_path %>
+<h1><%= link_to "Categorias", categories_path %></h1>
+
+<h1><%= link_to "añadir producto", new_product_path %></h1>
 </nav>
