31 actualizando y mejoranod el codigo

--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,4 +1,5 @@
 <nav>
+<h1><%= t('app_name') %></h1>
 <h1><%= link_to "Productos", products_path%></h1>
 <h1><%= link_to "Categorias", categories_path %></h1>
 
