--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -3,5 +3,8 @@
 <h1><%= link_to "Productos", products_path%></h1>
 <h1><%= link_to "Categorias", categories_path %></h1>
 
-<h1><%= link_to "añadir producto", new_product_path %></h1>
+<h3><%= link_to "añadir producto", new_product_path %></h3>
+<h3><%= link_to "iniciar sesión", new_session_path %></h3>
+<h3><%= link_to "crear usuario", new_user_path%></h3>
+
 </nav>
