--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,10 +1,12 @@
 <nav>
 <h1><%= t('app_name') %></h1>
-<h1><%= link_to "Productos", products_path%></h1>
-<h1><%= link_to "Categorias", categories_path %></h1>
 
-<h3><%= link_to "añadir producto", new_product_path %></h3>
-<h3><%= link_to "iniciar sesión", new_session_path %></h3>
-<h3><%= link_to "crear usuario", new_user_path%></h3>
-
+<%= link_to t('.add'), new_product_path if Current.user %>
+<%= link_to t('.categories'), categories_path if Current.user %>
+<%= link_to t('.login'), new_session_path unless Current.user %>
+<%= link_to t('.register'), new_user_path unless Current.user %>
+<%= link_to t('.logout'), session_path(Current.user.id), data: {
+  turbo_method: :delete,
+  turbo_confirm: t('common.confirm')
+} if Current.user %>
 </nav>
