--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,4 +8,6 @@
 <%= link_to t('.edit'), edit_product_path(@product) if @product.owner? %>
 <%= link_to t('.delete'), product_path(@product), data: {turbo_method: :delete, turbo_confirm: t('common.confirm')} if @product.owner? %>
 <%= link_to t('.view_more_products', username: @product.user.username), user_path(@product.user.username) %>
-
+<%= link_to '❤️', favorites_path(product_id: @product.id), data: {
+  turbo_method: :post
+} %>
