--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,23 @@
-<h1>Detalle de Productos:</h1>
-<br>
-<%= image_tag @product.photo, width: 100 if @product.photo.attached?   %>
-<h2 class="title">Nombre: <%= @product.title %> </h2>
-<p class="description">Descripcion:  <%= @product.description%> </p>
-<span class="price">Precio: <%= @product.price %> </span>
+<%= image_tag @product.photo, width: 200 if @product.photo.attached? %>
+
+<h1 class='title'><%= @product.title %></h1>
+
+<p class='description'><%= @product.description %></p>
+
+<span class='price'><%= @product.price %>$</span>
 
 <%= link_to t('.edit'), edit_product_path(@product) if @product.owner? %>
-<%= link_to t('.delete'), product_path(@product), data: {turbo_method: :delete, turbo_confirm: t('common.confirm')} if @product.owner? %>
+<%= link_to t('.delete'), product_path(@product), data: {
+  turbo_method: :delete,
+  turbo_confirm: t('common.confirm')
+} if @product.owner? %>
 <%= link_to t('.view_more_products', username: @product.user.username), user_path(@product.user.username) %>
-<%= link_to '❤️', favorites_path(product_id: @product.id), data: {
-  turbo_method: :post
-} %>
+<% if @product.favorite %>
+  <%= link_to '💔', favorite_path(@product.id), data: {
+    turbo_method: :delete
+  } %>
+<% else %>
+  <%= link_to '❤️', favorites_path(product_id: @product.id), data: {
+    turbo_method: :post
+  } %>
+<% end %>
