--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,8 +16,11 @@
 
 <%= link_to t('.all'), products_path %>
   <%= render partial: 'category', collection: @categories %>
-  <%= turbo_frame_tag "products-#{@pagy.page}", class: 'products' do %>
-    <%= render partial: 'product', collection: @products %>
-    <%= turbo_frame_tag "products-#{@pagy.next}", class: 'products', src: pagy_url_for(@pagy, @pagy.next), loading: :lazy if @pagy.next %>
+
+  <%= turbo_frame_tag :products do %>
+    <%= turbo_frame_tag "products-#{@pagy.page}", class: 'products' do %>
+      <%= render partial: 'product', collection: @products %>
+      <%= turbo_frame_tag "products-#{@pagy.next}", class: 'products', src: pagy_url_for(@pagy, @pagy.next), loading: :lazy if @pagy.next %>
+    <% end %>
   <% end %>
 <% end %>
