--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
@@ -13,6 +14,9 @@
   <body>
     <%= render  'partials/flash' %>
     <%= render  'partials/navbar' %>
+    <h1 class="text-3xl font-bold underline">
+        Hello world!
+    </h1>
     <%= yield %>
   </body>
 </html>
