45 añadiendo estilos con tailwind

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,9 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="bg-gray-700 p-4">
     <%= render  'partials/flash' %>
     <%= render  'partials/navbar' %>
-    <h1 class="text-3xl font-bold underline">
-        Hello world!
-    </h1>
     <%= yield %>
   </body>
 </html>
