--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
   <body class="bg-gray-700 p-4">
     <%= render  'partials/flash' %>
     <%= render  'partials/navbar' %>
-    <%= yield %>
+    <div class="lg:container lg:mx-auto">
+      <%= yield %>
+    </div>
   </body>
 </html>
