--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,12 +17,12 @@
 
 <div class="my-4 flex overflow-x-scroll gap-2  ">
   <%= link_to t('.all'), products_path, class: "bg-white text-gray-600 px-4 py-2 rounded-2xl drop-shadow-sm hover:bg-gray-300" %>
-  <%= render partial: 'category', collection: @categories, class: "bg-white text-gray-600 px-4 py-2 rounded-2xl drop-shadow-sm hover:bg-gray-300" %>
+  <%= render partial: 'category', collection: @categories, class: "bg-white text-gray-600 px-4 py-2 rounded-2xl drop-shadow-sm hover:bg-gray-300 " %>
 </div>
   <%= turbo_frame_tag :products, class: "flex flex-col m-2" do %>
-    <%= turbo_frame_tag "products-#{@pagy.page}", class: 'products flex flex-col w-full' do %>
+    <%= turbo_frame_tag "products-#{@pagy.page}", class: 'products flex flex-col w-full sm:flex-row sm:flex-wrap  sm:gap-x-2' do %>
       <%= render partial: 'product', collection: @products %>
-      <%= turbo_frame_tag "products-#{@pagy.next}", class: 'products flex flex-col w-full', src: pagy_url_for(@pagy, @pagy.next), loading: :lazy if @pagy.next %>
+      <%= turbo_frame_tag "products-#{@pagy.next}", class: 'products flex flex-col w-full sm:flex-row sm:flex-wrap sm:gap-x-2', src: pagy_url_for(@pagy, @pagy.next), loading: :lazy if @pagy.next %>
     <% end %>
   <% end %>
 <% end %>
