--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,18 +1,20 @@
-<nav class="bg-white flex justify-between items-center p-2">
+<nav class="bg-white flex justify-between items-center px-2" data-controller='menu'>
 <%= link_to products_path do %>
   <h1 class="text-2xl font-bold text-teal-500"><%= t('app_name') %></h1>
 <% end %>
 
-<div class="flex">
-  <%= link_to t('.add'), new_product_path, class: "mx-2 text-teal-500 font-bold" if Current.user %>
-  <%= link_to t('.favorites'), favorites_path, class: "mx-2 text-teal-500 font-bold" if Current.user %>
-  <%= link_to t('.categories'), categories_path, class: "mx-2 text-teal-500 font-bold" if Current.user&.admin? %>
-  <%= link_to t('.login'), new_session_path, class: "mx-2 text-teal-500 font-bold" unless Current.user %>
+<button class="sm:hidden" data-action="click->menu#toggle"> <%= image_tag 'icons/menu.svg', width:35, height: 35 %> </button>
 
-  <%= link_to t('.register'), new_user_path, class: "mx-2 text-teal-500 font-bold" unless Current.user %>
-  <%= link_to t('.logout'), session_path(Current.user.id), class: "mx-2 text-rose-500 font-bold", data: {
-    turbo_method: :delete,
-    turbo_confirm: t('common.confirm')
-  } if Current.user %>
+<div class="hidden sm:block">
+  <%= render partial: 'partials/items'%>
+</div>
+<%
+=begin%>
+  para tamaño movil  
+<%
+=end%>
+<div class="gap-4 sm:hidden absolute bg-white top-0 right-0 shadow z-10 h-full flex flex-col min-w-[35%] overflow-y-scroll ease-in-out duration-200 p-5 translate-x-full" data-menu-target="items">
+  <button class="mb-4"  data-action="click->menu#toggle"> <%= image_tag 'icons/close.svg', width:35, height: 35 %> </button>
+  <%= render partial: 'partials/items'%>
 </div>
 </nav>
