--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,17 +7,14 @@
     <div class="flex">
       <%= form.number_field :min_price, placeholder: t('.min_price'), onChange: 'this.form.requestSubmit()', value: params[:min_price], class: "w-1/3 roundend-2xl border-gray-200" %>
       <%= form.number_field :max_price, placeholder: t('.max_price'),onChange: 'this.form.requestSubmit()', value: params[:max_price], class: "w-1/3 roundend-2xl border-gray-200 mx-2" %>
-      <%# formulario para hacer select  %>
-      <%# ---- de esto %>
-      <%# <%= form.select :order_by, options_for_select([["recientes", "newest"], ["Más Caros", "expensive"], ["Más baratos", "cheaper"]], params[:order_by]), {}, {onChange: 'this.form.requestSubmit()' }  %> 
-      <%# ---- a esto traendo desde el modelo y haciendo el select mas dinamico  %>
       <%= form.select :order_by, options_for_select(Product::ORDER_BY.keys.map {|order| [t(".#{order}"), order]}, params[:order_by]), {}, {onChange: 'this.form.requestSubmit()' , class: "w-1/3 roundend-2xl border-gray-200"}  %>
     </div>
   <% end %>
 
-<div class="my-4 flex overflow-x-scroll gap-2  ">
-  <%= link_to t('.all'), products_path, class: "bg-white text-gray-600 px-4 py-2 rounded-2xl drop-shadow-sm hover:bg-gray-300" %>
-  <%= render partial: 'category', collection: @categories, class: "bg-white text-gray-600 px-4 py-2 rounded-2xl drop-shadow-sm hover:bg-gray-300 " %>
+<div class=" flex overflow-x-scroll gap-2 my-4  ">
+  <%= render(CategoryComponent.new)%>
+
+  <%= render(CategoryComponent.with_collection(@categories) , class: "bg-white text-gray-600 px-4 py-2 rounded-2xl drop-shadow-sm hover:bg-gray-300 ") %>
 </div>
   <%= turbo_frame_tag :products, class: "flex flex-col m-2" do %>
     <%= turbo_frame_tag "products-#{@pagy.page}", class: 'products flex flex-col w-full sm:flex-row sm:flex-wrap  sm:gap-x-2' do %>
