--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,3 +14,4 @@
 <%= link_to t('.view_more_products', username: @product.user.username), user_path(@product.user.username) %>
 
 <%= render partial: 'favorite', locals: { product: @product } %>
+<div data-controller="websocket-product" data-productid="<%= @product.id %>"></div>
