--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,10 +1,4 @@
-<%= image_tag @product.photo, width: 200 if @product.photo.attached? %>
-
-<h1 class='title'><%= @product.title %></h1>
-
-<p class='description'><%= @product.description %></p>
-
-<span class='price'><%= @product.price %>$</span>
+<%= render partial: "products/product_details", locals: {product: @product} %>
 
 <%= link_to t('.edit'), edit_product_path(@product) if @product.owner? %>
 <%= link_to t('.delete'), product_path(@product), data: {
@@ -14,4 +8,5 @@
 <%= link_to t('.view_more_products', username: @product.user.username), user_path(@product.user.username) %>
 
 <%= render partial: 'favorite', locals: { product: @product } %>
-<div data-controller="websocket-product" data-productid="<%= @product.id %>"></div>
+
+<%= turbo_stream_from @product %>
